Added function to remove outliers

--- a/david_scratch_notebook.ipynb
+++ b/david_scratch_notebook.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "different-tribute",
+   "execution_count": 3,
+   "id": "geological-niger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,394 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "eight-discretion",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'acquire_zillow' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-a69f6b4b3cc2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mzillow_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0macquire_zillow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0macquire_zillow_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'acquire_zillow' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "zillow_df = acquire_zillow.acquire_zillow_df();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "italic-frank",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zillow_df.sample(14)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "adjustable-martin",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zillow_df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "alert-briefs",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "utils.show_missing_value_stats_by_col(zillow_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "french-damages",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "utils.show_missing_value_stats_by_row(zillow_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "geographic-wrist",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow = utils.handle_missing_values(zillow_df.copy(), .6, .4)\n",
-    "drop_missing_zillow.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "recovered-pollution",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "universal-tuning",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "infrared-problem",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "utils.show_missing_value_stats_by_col(drop_missing_zillow)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "binding-metadata",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['buildingqualitytypeid'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "adaptive-replica",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['buildingqualitytypeid'].fillna(value=8.0, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "mounted-technician",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['buildingqualitytypeid'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "viral-animation",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['calculatedbathnbr'].median()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "measured-representation",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['calculatedbathnbr'].fillna(value=2.0, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "british-thing",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['calculatedfinishedsquarefeet'].median()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "turned-advance",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['calculatedfinishedsquarefeet'].fillna(value=1542, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "noted-diesel",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "utils.show_missing_value_stats_by_col(drop_missing_zillow)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acceptable-things",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_cols = ['finishedsquarefeet12', 'fullbathcnt', 'propertylandusetypeid', 'heatingorsystemtypeid', 'censustractandblock']\n",
-    "drop_missing_zillow.drop(columns=drop_cols, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "velvet-smooth",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "utils.show_missing_value_stats_by_col(drop_missing_zillow)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "small-conflict",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['lotsizesquarefeet'].median()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial-active",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['lotsizesquarefeet'].fillna(value=7205, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "found-equity",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['propertyzoningdesc'].mode()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "structured-franchise",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['propertyzoningdesc'].fillna(value='LAR1', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "hawaiian-second",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['regionidcity'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "brave-sapphire",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['regionidcity'].fillna(value=12447, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "front-sponsorship",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "utils.show_missing_value_stats_by_col(drop_missing_zillow)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "rational-trial",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['regionidzip'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "desperate-operator",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['regionidzip'].fillna(value=97319, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "political-shoulder",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['unitcnt'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "verbal-miracle",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['unitcnt'].fillna(value=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "supreme-valuable",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "utils.show_missing_value_stats_by_col(drop_missing_zillow)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "neutral-engineer",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['yearbuilt'].median()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "composed-sender",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['yearbuilt'].fillna(value=1970, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "innovative-somalia",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['structuretaxvaluedollarcnt'].fillna(value=136399.0, inplace=True)\n",
-    "\n",
-    "drop_missing_zillow['heatingorsystemdesc'].fillna(value='Central', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "relevant-cycle",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "utils.show_missing_value_stats_by_col(drop_missing_zillow)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "least-surprise",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "utils.show_missing_value_stats_by_row(drop_missing_zillow)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "direct-exchange",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_missing_zillow['taxamount'].fillna(value=4447.63, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "vertical-secret",
+   "execution_count": 4,
+   "id": "creative-august",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,29 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "expanded-meeting",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'zillow_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-8f7db5f16f24>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mzillow_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'zillow_df' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "zillow_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "valued-salvation",
+   "id": "unlimited-edition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "oriented-macintosh",
+   "id": "prescribed-marshall",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -622,32 +214,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "level-intent",
+   "execution_count": 7,
+   "id": "median-supplement",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6037.0    50695\n",
-       "6059.0    20630\n",
-       "6111.0     6250\n",
-       "Name: fips, dtype: int64"
+       "(34342, 45)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "utils.generate_outlier_bounds()"
+    "train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "outstanding-valuation",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.2303946228943999, -0.21584279780949994)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "utils.generate_outlier_bounds(train, 'error', 3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "absent-peripheral",
+   "id": "consecutive-berry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "jewish-registrar",
+   "id": "durable-ireland",
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "adequate-influence",
+   "id": "plastic-childhood",
    "metadata": {},
    "outputs": [
     {
@@ -1042,10 +652,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alleged-blink",
+   "id": "trying-spectacular",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "utils.split_dataframe()"
+   ]
   }
  ],
  "metadata": {
