Updated final notebook and added lower bound for outliers

--- a/david_scratch_notebook.ipynb
+++ b/david_scratch_notebook.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "geological-niger",
+   "execution_count": 1,
+   "id": "norman-alberta",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,8 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "creative-august",
+   "execution_count": null,
+   "id": "crucial-diamond",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "unlimited-edition",
+   "id": "multiple-correspondence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "prescribed-marshall",
+   "id": "southeast-liquid",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "median-supplement",
+   "id": "vocational-africa",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "outstanding-valuation",
+   "id": "virtual-jewel",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "consecutive-berry",
+   "id": "promotional-pioneer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "durable-ireland",
+   "id": "split-dining",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "plastic-childhood",
+   "id": "reverse-friday",
    "metadata": {},
    "outputs": [
     {
@@ -651,13 +651,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "promising-toronto",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    34342.000000\n",
+       "mean        -0.002972\n",
+       "std          0.104780\n",
+       "min         -4.655420\n",
+       "25%         -0.025814\n",
+       "50%          0.004239\n",
+       "75%          0.032916\n",
+       "max          0.223345\n",
+       "Name: error, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.error.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "trying-spectacular",
+   "id": "political-august",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "utils.split_dataframe()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
