--- a/zillow_clustering_project_final.ipynb
+++ b/zillow_clustering_project_final.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "identical-polyester",
+   "id": "cloudy-september",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blond-booth",
+   "id": "animal-moscow",
    "metadata": {},
    "source": [
     "# Attention Grabbing Title!\n",
@@ -66,13 +66,14 @@
     "5. Drop columns with less than 60% of values populated\n",
     "6. Drop rows with less than 40% of values populated\n",
     "7. Drop columns deemed redundant or unnecessary\n",
+    "8. Remove outliers above the upper bound determined by 3 * IQR of the column\n",
     "8. Split the data frame into train, validate, and test samples"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "juvenile-integrity",
+   "id": "preceding-knight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "junior-consensus",
+   "id": "average-exhibition",
    "metadata": {},
    "outputs": [],
    "source": []
